--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -18,9 +18,11 @@ body {
 
   margin: 0;
   padding: 0;
+  overflow: hidden;
   background-color: $white;
   color: $black;
   font-weight: 700;
+  -webkit-font-smoothing: antialiased;
 }
 
 img {
@@ -36,14 +38,18 @@ img {
   top: 100vh;
   left: 0;
   background: $white;
+  -webkit-transform: translateZ(0);
+  transition: top 0.75s ease-out;
 }
 
 .active {
   top: 0;
+  z-index: 2;
 }
 
 .previous {
   top: -100vh;
+  z-index: 1;
 }
 
 .logo img {
