--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -2,31 +2,6 @@
 @import 'fonts';
 @import 'colours';
 
-// Panel colour classes /////////////////////////////////////////////////////////////////
-// colour pallette from Michael
-.c0 {
-  background-color: rgb(132, 153, 75); // the key green
-}
-.c1 {
-  background-color: rgb(237, 28, 26);
-}
-.c2 {
-  background-color: rgb(241, 103, 36);
-}
-.c3 {
-  background-color: rgb(251, 178, 27);
-}
-.c4 {
-  background-color: rgb(93, 188, 105);
-}
-.c5 {
-  background-color: rgb(51, 192, 204);
-}
-.c6 {
-  background-color: rgb(214, 49, 123);
-}
-
-
 #controls {
   position: absolute;
   right: 0;
@@ -44,20 +19,21 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: $white;
-  color: $black;
+  color: $white;
   font-weight: 700;
   -webkit-font-smoothing: antialiased;
 }
 
 img {
   display: block;
+  max-width: 100%;
 }
+
+/////////////////////////////////////////////////////////////////////////////////////////
 
 .item {
   position: absolute;
-  display: -webkit-flex;
-  display: flex;
+  display: table;
   width: 100%;
   height: 100vh;
   top: 100vh;
@@ -77,12 +53,63 @@ img {
   z-index: 1;
 }
 
-.logo img {
-  margin: auto;
-  width: 50%;
+/////////////////////////////////////////////////////////////////////////////////////////
+
+.logo {
+  display: -webkit-flex;
+  display: flex;
+
+  img {
+    margin: auto;
+    width: 50%;
+  }
 }
 
-.tester {
-  padding: 10%;
-  border: 5px solid red;
+/////////////////////////////////////////////////////////////////////////////////////////
+
+.icon {
+  display: table-cell;
+  width: 33%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.text {
+  display: table-cell;
+  width: 67%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.main {
+  font-size: 5vw;
+  line-height: 1;
+}
+
+.meta {
+  font-size: 2vw;
+}
+
+// Panel colour classes /////////////////////////////////////////////////////////////////
+// colour pallette from Michael
+.c0 {
+  background-color: rgb(132, 153, 75); // the key green
+}
+.c1 {
+  background-color: rgb(237, 28, 26); // red
+}
+.c2 {
+  background-color: rgb(241, 103, 36); // orange
+}
+.c3 {
+  background-color: rgb(251, 178, 27); // yellow
+}
+.c4 {
+  background-color: rgb(93, 188, 105); // green
+}
+.c5 {
+  background-color: rgb(51, 192, 204); // light blue
+}
+.c6 {
+  background-color: rgb(214, 49, 123); // pink
 }
